src/FinancialForce ERP Core/objects/BillingDocumentLineItem__c.object
<CustomObject>
    <customHelpPage>BillingDocumentLineItemHelp</customHelpPage>
    <fields>
        <fullName>BillingDocumentStatus__c</fullName>
        <description>Formula field containing the status of the billing document to which the billing document line item belongs.</description>
        <formula>TEXT(BillingDocument__r.DocumentStatus__c)</formula>
        <inlineHelpText>Status of the billing document to which this billing document line item belongs.</inlineHelpText>
        <label>Billing Document Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingDocument__c</fullName>
        <description>Billing document to which this billing document line item belongs.</description>
        <inlineHelpText>Billing document to which this billing document line item belongs.</inlineHelpText>
        <label>Billing Document</label>
        <referenceTo>BillingDocument__c</referenceTo>
        <relationshipLabel>Billing Document Line Items</relationshipLabel>
        <relationshipName>ChildBillingDocumentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DiscountTotal__c</fullName>
        <description>The total discount for this billing document line item.</description>
        <inlineHelpText>The total discount for this billing document line item.</inlineHelpText>
        <label>Discount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LineDescription__c</fullName>
        <description>Description of the billing document line item.</description>
        <inlineHelpText>Description of the billing document line item.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NetValueBeforeDiscount__c</fullName>
        <description>The net value of the billing document line item before the discounts are applied.</description>
        <inlineHelpText>The net value of the billing document line item before the discounts are applied.</inlineHelpText>
        <label>Net Value Before Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetValueOverride__c</fullName>
        <description>Optional manual calculation of the net value.</description>
        <inlineHelpText>Optional manual calculation of the net value.</inlineHelpText>
        <label>Net Value Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetValue__c</fullName>
        <description>Total Value of this billing document line item before tax. The formula used to calculate this is Quantity x Unit Price.</description>
        <formula>IF(ISNULL(NetValueOverride__c) , Quantity__c  *  UnitPrice__c, NetValueOverride__c)</formula>
        <inlineHelpText>Total Value of this billing document line item before tax. The formula used to calculate this is Quantity x Unit Price.</inlineHelpText>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Salesforce product or service to which this billing document line item relates.</description>
        <inlineHelpText>Lookup to the Salesforce product or service.</inlineHelpText>
        <label>Product or Service</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Service Relationship</relationshipLabel>
        <relationshipName>RelatedBillingDocumentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1.000000</defaultValue>
        <description>Number of items included in this billing document line item. This is used to calculate the Total Value of the billing document line item.</description>
        <inlineHelpText>Number of items included in this billing document line item. This is used to calculate the Total Value of the billing document line item.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportingNetValue__c</fullName>
        <description>Total Value of this billing document line item before tax based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as the Net Value. If the document is a credit note, the value is calculated using the formula: Net Value * -1.</description>
        <formula>IF (ISPICKVAL(BillingDocument__r.DocumentType__c, &quot;Credit Note&quot;),  NetValue__c * -1, NetValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Value of this billing document line item before tax based on the Document Type of the billing document.</inlineHelpText>
        <label>Reporting Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReportingTaxValue1__c</fullName>
        <description>Tax Value 1 of the corresponding Tax Rate based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as Tax Value 1. If the document is a credit note, the value is calculated using the formula: Tax Value 1 * -1.</description>
        <formula>IF (ISPICKVAL(BillingDocument__r.DocumentType__c, &quot;Credit Note&quot;),  TaxValue1__c * -1, TaxValue1__c)</formula>
        <inlineHelpText>Tax Value 1 of the corresponding Tax Rate based on the Document Type of the billing document.</inlineHelpText>
        <label>Reporting Tax Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportingTaxValue2__c</fullName>
        <description>Tax Value 2 of the corresponding Tax Rate based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as Tax Value 2. If the document is a credit note, the value is calculated using the formula: Tax Value 2 * -1.</description>
        <formula>IF (ISPICKVAL(BillingDocument__r.DocumentType__c, &quot;Credit Note&quot;),  TaxValue2__c * -1, TaxValue2__c)</formula>
        <inlineHelpText>Tax Value 2 of the corresponding Tax Rate based on the Document Type of the billing document.</inlineHelpText>
        <label>Reporting Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportingTaxValue3__c</fullName>
        <description>Tax Value 3 of the corresponding Tax Rate based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as Tax Value 3. If the document is a credit note, the value is calculated using the formula: Tax Value 3 * -1.</description>
        <formula>IF (ISPICKVAL(BillingDocument__r.DocumentType__c, &quot;Credit Note&quot;),  TaxValue3__c * -1, TaxValue3__c)</formula>
        <inlineHelpText>Tax Value 3 of the corresponding Tax Rate based on the Document Type of the billing document.</inlineHelpText>
        <label>Reporting Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportingTaxValueTotal__c</fullName>
        <description>Total tax for the billing document line item based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as the Tax Value Total. If the document is a credit note, the value is calculated using the formula: Tax Value Total * -1.</description>
        <formula>IF (ISPICKVAL(BillingDocument__r.DocumentType__c, &quot;Credit Note&quot;),  TaxValueTotal__c * -1, TaxValueTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total tax for the billing document line item based on the Document Type of the billing document.</inlineHelpText>
        <label>Reporting Tax Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReportingTotalValue__c</fullName>
        <description>Total Value of this billing document line item including tax based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as the Total Value. If the document is a credit note, the value is calculated using the formula: Total Value * -1.</description>
        <formula>IF (ISPICKVAL(BillingDocument__r.DocumentType__c, &quot;Credit Note&quot;),  TotalValue__c * -1, TotalValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Value of this billing document line item including tax based on the Document Type of the billing document.</inlineHelpText>
        <label>Reporting Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tax code to use when calculating tax for this billing document line item.</description>
        <inlineHelpText>Tax code to use when calculating tax for this billing document line item. You can use the tax codes to represent the state, county and city tax authorities.</inlineHelpText>
        <label>Tax Code 1</label>
        <referenceTo>TaxCode__c</referenceTo>
        <relationshipLabel>Billing Document Line Items (Tax Code)</relationshipLabel>
        <relationshipName>BillingDocumentLineItemsTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tax code to use when calculating tax for this billing document line item.</description>
        <inlineHelpText>Tax code to use when calculating tax for this billing document line item. You can use the tax codes to represent the state, county and city tax authorities.</inlineHelpText>
        <label>Tax Code 2</label>
        <referenceTo>TaxCode__c</referenceTo>
        <relationshipLabel>Billing Document Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>BillingDocumentLineItemsTaxCode2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tax code to use when calculating tax for this billing document line item.</description>
        <inlineHelpText>Tax code to use when calculating tax for this billing document line item. You can use the tax codes to represent the state, county and city tax authorities.</inlineHelpText>
        <label>Tax Code 3</label>
        <referenceTo>TaxCode__c</referenceTo>
        <relationshipLabel>Billing Document Line Items (Tax Code 3)</relationshipLabel>
        <relationshipName>BillingDocumentLineItemsTaxCode3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxRate1__c</fullName>
        <description>Tax rate to use when calculating tax for this billing document line item.</description>
        <inlineHelpText>Tax rate to use when calculating tax for this billing document line item.</inlineHelpText>
        <label>Tax Rate 1</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate2__c</fullName>
        <description>Tax rate to use when calculating tax for this billing document line item.</description>
        <inlineHelpText>Tax rate to use when calculating tax for this billing document line item.</inlineHelpText>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate3__c</fullName>
        <description>Tax rate to use when calculating tax for this billing document line item.</description>
        <inlineHelpText>Tax rate to use when calculating tax for this billing document line item.</inlineHelpText>
        <label>Tax Rate 3</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRateTotal__c</fullName>
        <description>Total tax rate for the billing document line item.</description>
        <formula>TaxRate1__c + TaxRate2__c + TaxRate3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total tax rate for the billing document line item.</inlineHelpText>
        <label>Tax Rate Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue1__c</fullName>
        <description>Tax value calculated from the corresponding tax rate using the formula: Net Value * (Tax Rate / 100).</description>
        <inlineHelpText>Tax value calculated from the corresponding tax rate using the formula: Net Value * (Tax Rate / 100).</inlineHelpText>
        <label>Tax Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue2__c</fullName>
        <description>Tax value calculated from the corresponding tax rate using the formula: Net Value * (Tax Rate / 100).</description>
        <inlineHelpText>Tax value calculated from the corresponding tax rate using the formula: Net Value * (Tax Rate / 100).</inlineHelpText>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue3__c</fullName>
        <description>Tax value calculated from the corresponding tax rate using the formula: Net Value * (Tax Rate / 100).</description>
        <inlineHelpText>Tax value calculated from the corresponding tax rate using the formula: Net Value * (Tax Rate / 100).</inlineHelpText>
        <label>Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValueTotal__c</fullName>
        <description>Total tax for the billing document line item.</description>
        <formula>TaxValue1__c + TaxValue2__c + TaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total tax for the billing document line item.</inlineHelpText>
        <label>Tax Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalValue__c</fullName>
        <description>Total Value of this billing document line item including tax. The formula used to calculate this is Net Value + Tax Value Total.</description>
        <formula>NetValue__c + TaxValueTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Value of this billing document line item. The formula used to calculate this is Net Value + Tax Value Total.</inlineHelpText>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <defaultValue>0.000000000</defaultValue>
        <description>Price of one item for the billing document line item. This is used to calculate the Total Value of the billing document line item.</description>
        <inlineHelpText>Price of one item for the billing document line item. This is used to calculate the Total Value of the billing document line item.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Billing Document Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductService__c</columns>
        <columns>Quantity__c</columns>
        <columns>UnitPrice__c</columns>
        <columns>NetValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BDLI{0000000000}</displayFormat>
        <label>Document Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Document Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>